--- a/src/components/Layout/Header/styles.module.css
+++ b/src/components/Layout/Header/styles.module.css
@@ -2,16 +2,14 @@
   /* display: flex; */
   @mixin flex-center-space-between;
 
+  z-index: var(--z-index-header);
   justify-content: flex-end;
+  width: 100%;
+  padding: 2.5rem 1.125rem 0;
+  pointer-events: auto;
 
   @media (--md-up) {
     justify-content: space-between;
-  }
-
-  width: 100%;
-  padding: 2.5rem 1.125rem 0;
-
-  @media (--md-up) {
     padding-right: 60px;
     padding-left: 60px;
   }
@@ -21,5 +19,5 @@
   position: fixed;
   right: 0;
   left: 0;
-  z-index: var(--z-index-header);
+  pointer-events: none;
 }
